<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tv_germplasm"
                    style="@style/text_input_layout">

                    <EditText
                        android:id="@+id/et_germplasm"
                        style="@style/edit_text_input_layout"
                        android:hint="@string/germplasm" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tv_cross"
                    style="@style/text_input_layout">

                    <EditText
                        android:id="@+id/tv_select_cross"
                        style="@style/edit_text_input_layout"
                        android:hint="@string/cross" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tv_source"
                    style="@style/text_input_layout">

                    <EditText
                        android:id="@+id/tv_select_source"
                        style="@style/edit_text_input_layout"
                        android:hint="@string/source" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tv_location"
                    style="@style/text_input_layout">

                    <EditText
                        android:id="@+id/tv_select_location"
                        style="@style/edit_text_input_layout"
                        android:hint="@string/location" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tv_lot"
                    style="@style/text_input_layout">

                    <EditText
                        android:id="@+id/et_lot"
                        style="@style/edit_text_input_layout"
                        android:hint="@string/lot"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tv_stock"
                    style="@style/text_input_layout">

                    <EditText
                        android:id="@+id/et_stock"
                        style="@style/edit_text_input_layout"
                        android:hint="@string/stock" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tv_balance"
                    style="@style/text_input_layout">

                    <EditText
                        android:id="@+id/et_balance"
                        style="@style/edit_text_input_layout"
                        android:hint="@string/balance"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tv_room"
                    style="@style/text_input_layout">

                    <EditText
                        android:id="@+id/et_room"
                        style="@style/edit_text_input_layout"
                        android:hint="@string/room"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tv_shelf"
                    style="@style/text_input_layout">

                    <EditText
                        android:id="@+id/et_shelf"
                        style="@style/edit_text_input_layout"
                        android:hint="@string/shelf"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tv_row"
                    style="@style/text_input_layout">

                    <EditText
                        android:id="@+id/et_row"
                        style="@style/edit_text_input_layout"
                        android:hint="@string/row"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tv_box"
                    style="@style/text_input_layout">

                    <EditText
                        android:id="@+id/et_box"
                        style="@style/edit_text_input_layout"
                        android:hint="@string/box"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tv_note"
                    style="@style/text_input_layout">

                    <EditText
                        android:id="@+id/et_note"
                        style="@style/edit_text_input_layout"
                        android:hint="@string/note" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#E0E0E0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#EEEEEE"
            android:orientation="horizontal"
            android:paddingBottom="6dp"
            android:paddingTop="8dp"
            android:weightSum="2">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_reset"
                    style="@style/button_order"
                    android:background="@drawable/selector_background_button_reset"
                    android:text="RESET"
                    android:textColor="@drawable/selector_font_button_reset" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_add"
                    style="@style/button_order"
                    android:background="@drawable/selector_background_button_add"
                    android:text="ADD"
                    android:textColor="@drawable/selector_font_button_add" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>