<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tv_location_name"
                    style="@style/text_input_layout">

                    <EditText
                        android:id="@+id/et_location_name"
                        style="@style/edit_text_input_layout"
                        android:hint="@string/location_name" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tv_province"
                    style="@style/text_input_layout">

                    <EditText
                        android:id="@+id/tv_select_province"
                        style="@style/edit_text_input_layout"
                        android:hint="@string/province" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tv_district"
                    style="@style/text_input_layout">

                    <EditText
                        android:id="@+id/tv_select_district"
                        style="@style/edit_text_input_layout"
                        android:hint="@string/district" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tv_sub_district"
                    style="@style/text_input_layout">

                    <EditText
                        android:id="@+id/tv_select_sub_district"
                        style="@style/edit_text_input_layout"
                        android:hint="@string/sub_district" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#E0E0E0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#EEEEEE"
            android:orientation="horizontal"
            android:paddingBottom="6dp"
            android:paddingTop="8dp">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_delete"
                    style="@style/button_order"
                    android:background="@drawable/selector_background_button_reset"
                    android:text="DELETE"
                    android:textColor="@drawable/selector_font_button_add" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_update"
                    style="@style/button_order"
                    android:background="@drawable/selector_background_button_add"
                    android:text="UPDATE"
                    android:textColor="@drawable/selector_font_button_add" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>